Validation added. Failed validation page added.

--- a/src/main/resources/templates/invalid.html
+++ b/src/main/resources/templates/invalid.html
@@ -1,15 +1,14 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8"/>
-    <title>Success!</title>
+    <meta charset="UTF-8">
+    <title>Invalid</title>
     <link href="/css/main.css" rel="stylesheet" type="text/css"/>
     <meta name="viewport" content="width=device-width">
 </head>
 <body>
-<h3>Nothing happened... Fuck you!</h3>
 <a href="/taskform">
-    <img src="https://i.kym-cdn.com/entries/icons/mobile/000/003/617/OkayGuy.jpg" style="width:360px;height:200px;">
+    <img src="https://image.shutterstock.com/image-vector/invalid-seal-print-corroded-texture-600w-1232017768.jpg">
 </a>
 </body>
 </html>
