--- a/src/main/resources/static/css/main.css
+++ b/src/main/resources/static/css/main.css
@@ -1,7 +1,14 @@
+.menu {
+display: flex;
+flex-direction: row;
+}
+
 #taskBtn {
-  position: absolute; left: 50%;
-  position: absolute; top: 15%;
-  margin-left: -150px;
+  margin: 50px;
+}
+
+#tasklistBtn {
+  margin: 50px;
 }
 
 button{
@@ -100,4 +107,31 @@ button:hover {
 .descr {
   width: 80%;
   height: 10em;
+}
+
+.row {
+display: flex;
+flex-direction: row;
+}
+
+.cell {
+margin: 5px;
+border-style: solid;
+border-width: 1px;
+}
+
+.project {
+width: 50px;
+}
+
+.summary {
+width: 300px;
+}
+
+.assignee {
+width: 150px;
+}
+
+.description {
+width: 500px;
 }
