--- a/src/main/resources/templates/taskform.html
+++ b/src/main/resources/templates/taskform.html
@@ -5,6 +5,8 @@
     <title>Task hacker</title>
     <link href="/css/main.css" rel="stylesheet" type="text/css"/>
     <meta name="viewport" content="width=device-width">
+    <script src="https://code.jquery.com/jquery-3.5.1.js"></script>
+    <script src="/js/taskValidation.js"></script>
 </head>
 <body>
 <div class="menu">
@@ -19,26 +21,28 @@
     </div>
 </div>
 <div id="createTask" class="modal">
-    <form action="#" th:action="@{/taskform}" th:object="${taskform}" method="post">
+    <form th:action="@{/taskform}" th:object="${taskform}" method="post" id="taskform">
         <div class="modal-content">
             <div class="modal-header">
                 <span class="close">&times;</span>
                 <h2>Create new task</h2>
             </div>
             <div class="modal-body">
-                <p>Project: </p><input type="text" th:field="*{project}"/>
-                <p>Summary: </p><input class="summary" type="text" th:field="*{summary}"/>
-                <p>Assignee: </p><input type="text" th:field="*{assignee}"/>
-                <p>Description: </p><textarea class="descr" th:field="*{description}"></textarea>
+                <p>Project: </p><input name="project" th:field="*{project}" type="text"/>
+                <p>Summary: </p><input class="summary" name="summary" th:field="*{summary}" type="text"/>
+                <p>Assignee: </p><input name="assignee" th:field="*{assignee}" type="text"/>
+                <p>Description: </p><textarea class="descr" name="description" th:field="*{description}"></textarea>
             </div>
             <div class="modal-footer">
                 <span><input id="createBtn" type="submit" value="Create"/></span>
             </div>
         </div>
     </form>
-
 </div>
 
+<script>
+    $("#taskform").validate();
+</script>
 <script src="/js/main.js"></script>
 </body>
 </html>
