FE validation complete

--- a/src/main/resources/templates/taskform.html
+++ b/src/main/resources/templates/taskform.html
@@ -7,6 +7,7 @@
     <meta name="viewport" content="width=device-width">
     <script src="https://code.jquery.com/jquery-3.5.1.js"></script>
     <script src="/js/taskValidation.js"></script>
+    <script src="/js/jquery.validate.js"></script>
 </head>
 <body>
 <div class="menu">
@@ -40,9 +41,9 @@
     </form>
 </div>
 
-<script>
-    $("#taskform").validate();
-</script>
+<!--<script>-->
+<!--    $("#taskform").validate();-->
+<!--</script>-->
 <script src="/js/main.js"></script>
 </body>
 </html>
