--- a/src/main/resources/templates/success.html
+++ b/src/main/resources/templates/success.html
@@ -8,7 +8,7 @@
 </head>
 <body>
 <h3>You stored a ticket... Fuck you, anyway!</h3>
-<a href="/taskform">
+<a href="/">
     <img src="https://i.kym-cdn.com/entries/icons/mobile/000/003/617/OkayGuy.jpg" style="width:360px;height:200px;">
 </a>
 </body>
