--- a/src/main/resources/templates/tasklist.html
+++ b/src/main/resources/templates/tasklist.html
@@ -21,8 +21,8 @@
         </div>
     </th:block>
 
-    <a href="/taskform">
-        <button>Back</button>
+    <a href="/">
+        <button>Go home</button>
     </a>
 </div>
 <script src="/js/main.js"></script>
