--- a/src/main/resources/static/css/main.css
+++ b/src/main/resources/static/css/main.css
@@ -28,7 +28,7 @@ button:hover {
 }
 
 .modal {
-  display: none;
+  display: block;
   position: fixed;
   z-index: 1;
   padding-top: 100px;
@@ -129,7 +129,7 @@ margin: 5px;
 cursor: pointer;
 }
 
-.taskID {
+.hidTaskID {
 display: none;
 }
 
