--- a/src/main/resources/templates/invalid.html
+++ b/src/main/resources/templates/invalid.html
@@ -7,7 +7,7 @@
     <meta name="viewport" content="width=device-width">
 </head>
 <body>
-<a href="/taskform">
+<a href="/">
     <img src="https://image.shutterstock.com/image-vector/invalid-seal-print-corroded-texture-600w-1232017768.jpg">
 </a>
 </body>
