--- a/src/main/resources/templates/tasklist.html
+++ b/src/main/resources/templates/tasklist.html
@@ -13,7 +13,9 @@
             <a th:href="'/edittask/' + ${task.id}" id="edittask">
             <img src="/img/edit-icon.png" height="18px" class="editicon" alt="edit">
             </a>
+            <a th:href="'/task/' + ${task.id}">
             <div class="taskID" th:text="${task.id}"></div>
+            </a>
             <div class="cell project" th:text="${task.project}"></div>
             <div class="cell summary" th:text="${task.summary}"></div>
             <div class="cell assignee" th:text="${task.assigneeName}"></div>
