user registration complete

--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -1,22 +1,23 @@
 <!DOCTYPE html>
-<html lang="en" xmlns:th="https://www.thymeleaf.org">
+<html lang="en">
 <head>
     <title>Hacker tracker</title>
     <link href="/css/main.css" rel="stylesheet" type="text/css"/>
     <meta name="viewport" content="width=device-width">
 </head>
 <body>
-<div class="menu">
-    <div id="taskBtn">
-        <a href="/taskform">
-            <button class="bigbtn">CREATE<br>A NEW TASK</button>
-        </a>
-    </div>
-
-    <div id="tasklistBtn">
-        <a href="/tasklist">
-            <button class="bigbtn">GET A<br>TASKLIST</button>
-        </a>
+<div class="mainpage">
+    <div class="menu">
+        <div id="taskBtn">
+            <a href="/registration">
+                <button class="bigbtn">Registration</button>
+            </a>
+        </div>
+        <div id="tasklistBtn">
+            <a href="/login">
+                <button class="bigbtn">Login</button>
+            </a>
+        </div>
     </div>
 </div>
 <script src="/js/main.js"></script>
