--- a/src/main/resources/templates/success.html
+++ b/src/main/resources/templates/success.html
@@ -7,8 +7,8 @@
     <meta name="viewport" content="width=device-width">
 </head>
 <body>
-<h3>You stored a ticket... Fuck you, anyway!</h3>
-<a href="/">
+<h1>Success! Fuck you!</h1>
+<a href="/menu">
     <img src="https://i.kym-cdn.com/entries/icons/mobile/000/003/617/OkayGuy.jpg" style="width:360px;height:200px;">
 </a>
 </body>
