--- a/src/main/resources/templates/tasklist.html
+++ b/src/main/resources/templates/tasklist.html
@@ -40,7 +40,7 @@
             </div>
         </th:block>
 
-        <a href="/">
+        <a href="/menu">
             <button>Go home</button>
         </a>
     </div>
