--- a/src/main/resources/templates/edittask.html
+++ b/src/main/resources/templates/edittask.html
@@ -28,7 +28,7 @@
                                               th:inline="text">[[${task.description}]]</textarea>
             </div>
             <div class="modal-footer">
-                <span><input id="createBtn" type="submit" value="Save"/></span>
+                <span><input class="submitBtn" type="submit" value="Save"/></span>
             </div>
         </div>
     </form>
