--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -1,8 +1,8 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="en" xmlns:th="https://www.thymeleaf.org">
 <head>
     <title>Hacker tracker</title>
-    <link href="/css/main.css" rel="stylesheet" type="text/css"/>
+    <link href="/css/main.css" rel="stylesheet" type="text/css">
     <meta name="viewport" content="width=device-width">
 </head>
 <body>
@@ -16,6 +16,11 @@
         <div id="tasklistBtn">
             <a href="/login">
                 <button class="bigbtn">Login</button>
+            </a>
+        </div>
+        <div id="menuBtn">
+            <a href="/menu">
+                <button class="bigbtn">Menu</button>
             </a>
         </div>
     </div>
