--- a/src/main/resources/templates/registration.html
+++ b/src/main/resources/templates/registration.html
@@ -12,7 +12,7 @@
             <p class="userfield">Name: <input required type="text" th:field="*{name}"/></p>
             <p class="userfield">Password: <input required type="password" th:field="*{password}"/></p>
             <p class="userfield">Email: <input required type="text" th:field="*{email}"/></p>
-            <span><input id="createBtn" type="submit" value="Register"/></span>
+            <span><input class="submitBtn" type="submit" value="Register"/></span>
         </form>
     </div>
 </div>
