--- a/src/main/resources/templates/taskform.html
+++ b/src/main/resources/templates/taskform.html
@@ -24,7 +24,7 @@
                 <p>Description: </p><textarea class="descr" name="description" th:field="*{description}"></textarea>
             </div>
             <div class="modal-footer">
-                <span><input id="createBtn" type="submit" value="Create"/></span>
+                <span><input class="submitBtn" type="submit" value="Create"/></span>
             </div>
         </div>
     </form>
