--- a/src/main/resources/templates/tasklist.html
+++ b/src/main/resources/templates/tasklist.html
@@ -41,9 +41,10 @@
         </th:block>
 
         <a href="/menu">
-            <button>Go home</button>
+            <button class="submitBtn">Go home</button>
         </a>
     </div>
     <script src="/js/main.js"></script>
+    </div>
 </body>
 </html>
