--- a/src/main/resources/templates/task.html
+++ b/src/main/resources/templates/task.html
@@ -35,7 +35,7 @@
     </div>
     <div>
         <a th:href="'/edittask/' + ${task.id}">
-            <button>Edit</button>
+            <button class="submitBtn">Edit</button>
         </a>
     </div>
 </div>
