--- a/src/main/resources/templates/menu.html
+++ b/src/main/resources/templates/menu.html
@@ -6,6 +6,16 @@
     <meta name="viewport" content="width=device-width">
 </head>
 <body>
+<div class="toolbar">
+    <div class="userinfo">
+
+        <a href="/logout">
+            <button>Logout</button>
+        </a>
+<!--        <p name="email" type="text" th:text="${userMainInfo.email}"></p>-->
+    </div>
+</div>
+
 <div class="menu">
     <div id="taskBtn">
         <a href="/taskform">
