--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -1,30 +1,27 @@
 <!DOCTYPE html>
-<html lang="en" xmlns:th="https://www.thymeleaf.org">
+<html lang="en">
 <head>
     <title>Hacker tracker</title>
     <link href="/css/main.css" rel="stylesheet" type="text/css">
     <meta name="viewport" content="width=device-width">
+    <script defer src="/js/main.js"></script>
 </head>
 <body>
-<div class="mainpage">
-    <div class="menu">
-        <div id="taskBtn">
-            <a href="/registration">
-                <button class="bigbtn">Registration</button>
-            </a>
-        </div>
-        <div id="tasklistBtn">
-            <a href="/login">
-                <button class="bigbtn">Login</button>
-            </a>
-        </div>
-        <div id="menuBtn">
-            <a href="/menu">
-                <button class="bigbtn">Menu</button>
-            </a>
-        </div>
+<div class="toolbar_tb">
+    <div class="tb_logo"><p class="p10">#Hacker_tracker</p></div>
+</div>
+
+<div class="row menu">
+    <div>
+        <a href="/registration">
+            <button class="bigbtn">Register</button>
+        </a>
+    </div>
+    <div>
+        <a href="/login">
+            <button class="bigbtn">Log in</button>
+        </a>
     </div>
 </div>
-<script src="/js/main.js"></script>
 </body>
 </html>
