--- a/src/main/resources/templates/success.html
+++ b/src/main/resources/templates/success.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en" xmlns:th="https://www.thymeleaf.org">
+<html lang="en">
 <head>
     <meta charset="UTF-8"/>
     <title>Success!</title>
@@ -7,9 +7,9 @@
     <meta name="viewport" content="width=device-width">
 </head>
 <body>
-<h1>Success! Fuck you!</h1>
+<h1>Success!</h1>
 <a href="/menu">
-    <img src="https://i.kym-cdn.com/entries/icons/mobile/000/003/617/OkayGuy.jpg" style="width:360px;height:200px;">
+    <img src="/img/ok.png" style="width:360px;height:200px;">
 </a>
 </body>
 </html>
